--- a/src/app/loginform/loginform.component.html
+++ b/src/app/loginform/loginform.component.html
@@ -6,7 +6,7 @@
           <mat-icon class="close-icon" color="warn" >close</mat-icon>
         </button>
       </div>
-        <img class="logo" mat-card-image src="../../assets/techleanlogo.png">
+        <img class="logo" mat-card-image src="../../assets/mainlogo.png">
         
       <div class="loginTabs">
         <mat-tab-group>
