--- a/src/app/refrigeratordetails/refrigeratordetails.component.css
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.css
@@ -1,7 +1,14 @@
+.mat-dialog-content
+{
+    width: 750px;
+    height: 65px;
+}
+
 .h1title
 {
     font-size: 30px;
     font-family: 'Trebuchet MS';
+    margin-top: 5px;
     margin-left: 18px;
 }
 .servicetype
@@ -64,8 +71,8 @@
 .mat-raised-button
 {
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     font-size: 18px;
     margin-left: 620px;
     margin-top: 50px;
@@ -74,7 +81,7 @@
 }
 .close-button{
     float: right;
-    top:-24px;
+    top:14px;
     right:-15px;
 }
 .close-icon{
