--- a/src/app/refrigeratordetails/refrigeratordetails.component.html
+++ b/src/app/refrigeratordetails/refrigeratordetails.component.html
@@ -1,25 +1,18 @@
-<div>
-  <div fxLayoutAlign="end">
-    <button mat-icon-button class="close-button" [mat-dialog-close]="true">
-      <mat-icon class="close-icon" color="warn">close</mat-icon>
-    </button>
-  </div>
-    <h1 class="h1title">Select a service</h1>
-</div>  
+<html>
+  <body>
+    <div class=mat-dialog-content>
+      <div fxLayoutAlign="end">
+        <button mat-icon-button class="close-button" [mat-dialog-close]="true">
+          <mat-icon class="close-icon" color="warn">close</mat-icon>
+        </button>
+      </div>
 
-<!--Select City-->  
-<div>
-    <mat-form-field class="servicetype" appearance="outline">
-        <mat-label>Service Type</mat-label>
-      <mat-select>
-        <mat-option value="one">Repair</mat-option>
-        
-      </mat-select>
-    </mat-form-field>
-</div> 
+    </div>  
+
+
 <!--Property Type-->    
 <div>
-    <h1 class="h2title">Unit Details</h1>
+    <h1 class="h1title">Unit Details</h1>
 </div> 
 
 <div>
@@ -78,8 +71,9 @@
     </div>
 
     <div>
-        <button class="done" mat-raised-button mat-dialog-close routerLink="/servicedetails">Done</button>
+        <button class="done" mat-raised-button mat-dialog-close routerLink="/servicedetails">Next</button>
         
     </div>
-</div> 
- 
+    </div> 
+  </body>
+</html>
