--- a/src/app/washingmachinedetails/washingmachinedetails.component.html
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.html
@@ -1,25 +1,17 @@
-<div>
+<html>
+<body>
+<div class=mat-dialog-content>
   <div fxLayoutAlign="end">
     <button mat-icon-button class="close-button" [mat-dialog-close]="true">
       <mat-icon class="close-icon" color="warn">close</mat-icon>
     </button>
   </div>
-    <h1 class="h1title">Select a service</h1>
+   
 </div>  
 
-<!--Select City-->  
-<div>
-    <mat-form-field class="servicetype" appearance="outline">
-        <mat-label>Service Type</mat-label>
-      <mat-select>
-        <mat-option value="one">Repair</mat-option>
-        <mat-option value="two">Installation</mat-option>
-      </mat-select>
-    </mat-form-field>
-</div> 
 <!--Property Type-->    
 <div>
-    <h1 class="h2title">Unit Details</h1>
+    <h1 class="h1title">Unit Details</h1>
 </div> 
 
 <div>
@@ -74,4 +66,5 @@
         
     </div>
 </div> 
- 
+</body>
+</html>
