--- a/src/app/adminpage/adminpage.component.css
+++ b/src/app/adminpage/adminpage.component.css
@@ -1,215 +1,180 @@
 .example-container {
-    max-width: 100%;
-    min-height: 910px;
-    margin-top: 10px;
-    margin-left: 0px;
-    border: 1px solid #E5E5E5;
-    border-radius: 30px;
-  }
- 
-  .toolbar
+  max-width: 100%;
+  min-height: 910px;
+  margin-top: 10px;
+  margin-left: 0;
+  border: 1px solid #E5E5E5;
+  border-radius: 30px;
+}
+
+.mat-drawer
+{
+width: 280px;
+background-color: #EAE2B7;
+}
+
+.toolbar
   {
-    background-color: #FCA311;
+    background-color: #D62828;
     margin-top: -20px;
   }
 
-  .techleantxt
+.logotxt
   {
-    width: 155px;
-    height: 125px;
-    padding-top: 40px;
+    font-family: Candara;
+    font-style: bold;
+    font-size: 30px;
+    color: #FFFFFF;
+    padding-top: 5px;
+    margin-left: 5px;
   }
 
-  .mat-drawer
-  {
-  width: 260px;
-  background-color:  #14213D;
-  }
-  
-  .mat-drawer-content
-  {
-  height: 910px;
-  background-color: white;
-  }
-  
-  .logo
-  {
-    width: 170px;
-    height: 90px;
-    margin-top: 80px;
-    margin-left: 50px;
-  }
-  
-  .dashboardside
-  {
-  margin-left: 40px;
-  
-  }
-  .dashBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 120px;
-  }
-  
-  .homeicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .mat-tab-group
-  {
-      width: 1000px;
-      margin-top: 50px;
-      margin-left: 70px;
-  }
-  
-  .workerside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .workericon
-  {
-    color: white;
-    font-size: 25px;
-    margin-left: 40px;
-  }
-  
-  .workerBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  
-  .profileside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .profileicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .profileBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  
-  .paymentside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .paymenticon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .paymentBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 25px;
-  
-  }
-  .paymentlink
-  {
-    text-decoration: none;
-    color: white;
-  }
-  
-  
   .inboxicon
   {
     font-size: 30px;
-    color: #14213D;
+    color: white;
     float: right;
-    margin-right: -1260px;
+    margin-right: 160px;
     margin-top: 10px;
   }
   
   .logouticon
   {
     font-size: 30px;
-    color: #14213D;
-    float: right;
-    margin-right: -1320px;
+    color: #FFFFFF;
+    margin-left: 1200px;
     margin-top: 10px;
   }
-  
-  .dashlink
-  {
-      color: white;
-      text-decoration: none;
-      
-  }
-  
-  .workerlink
-  {
-  color: white;
-  text-decoration: none;
-  }
-  
-  .profilelink
-  {
-      color: white;
-      text-decoration: none;
-  }
-      
-  .dashlink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
-  
-  .bookinglink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
-  
-  .profilelink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
 
-  .dashboardtxt
-  {
-    font-family: 'Trebuchet MS';
-    font-size: 25px;
-    color: #14213D;
+.mat-drawer-content
+{
+height: 910px;
+background-color: #FFFFFF;
+}
+
+.logo
+{
+  width: 170px;
+  height: 150px;
+  padding-top: 40px;
+  margin-left: 60px;
+}
+
+.dashboardside
+{
+margin-left: 0px;
+margin-top: 50px;
+text-align: justify;
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
+    align-self: auto;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 50px;
+    text-align: justify;
+    
+}
+
+.dashlink
+{
+color: #003049;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 18px;
+margin-left: 55px;
+text-decoration: none;
+margin-top: -33px;
+}
+
+.homeicon
+{
+  color: #003049;
+  font-size: 35px;
+  padding-top: 20px;
+  margin-left: 55px;
+}
+
+.workerside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+}
+
+.workerside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
     margin-top: 20px;
-    margin-left: 80px;
-  }
+    
+}
+
+.workerlink
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
+
+.workericon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+   
+.scheduleside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+
+}
+
+.scheduleside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    
+}
+.scheduleicon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+.schedulelink
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
+
  .newreqcard
  {
   width: 280px;
   height: 40px;
   margin-left: 80px;
-  margin-top: 20px;
+  margin-top: 100px;
  }
 
  .newreqtxt
@@ -332,12 +297,44 @@
     height: 80px;
  }
 
- .workercard
+ .reschedcard
  {
     width: 280px;
     height: 40px;
     margin-left: 740px;
     margin-top: -163px;
+ }
+
+ .reschedtxt
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 14px;
+  color: white;
+  margin-top: -85px;
+  margin-left: 125px;
+ }
+
+ .reschedcount
+ {
+  font-family: 'Trebuchet MS';
+  font-size: 18px;
+  color: white;
+  margin-top: -5px;
+  margin-left: 125px;
+ }
+
+ .reschedbg
+ {
+    width: 313px;
+    height: 80px;
+ }
+
+ .workercard
+ {
+    width: 280px;
+    height: 40px;
+    margin-left: 740px;
+    margin-top: 19px;
  }
 
  .workertxt
@@ -364,42 +361,11 @@
     height: 80px;
  }
 
- .regusercard
- {
-    width: 280px;
-    height: 40px;
-    margin-left: 740px;
-    margin-top: 19px;
- }
-
- .regusertxt
- {
-  font-family: 'Trebuchet MS';
-  font-size: 15px;
-  color: white;
-  margin-top: -85px;
-  margin-left: 125px;
- }
-
- .regusercount
- {
-  font-family: 'Trebuchet MS';
-  font-size: 18px;
-  color: white;
-  margin-top: -5px;
-  margin-left: 125px;
- }
-
- .reguserbg
- {
-    width: 313px;
-    height: 80px;
- }
-
  .mat-tab-group
  {
     width: 1350px;
-   
+    margin-top: 60px;
+    margin-left: 50px;
  }
 
  .searchfield
@@ -416,7 +382,7 @@
    margin-left: 20px;
    margin-top: 15px;
    width: 1290px;
-   height: 450px;
+   height: 400px;
    border: 2px solid #E5E5E5;
  }
  
@@ -432,7 +398,7 @@
    margin-left: 15px;
    margin-top: 15px;
    width: 1290px;
-   height: 450px;
+   height: 400px;
    border: 2px solid #E5E5E5;
  }
  
@@ -448,7 +414,7 @@
   margin-left: 20px;
   margin-top: 15px;
   width: 1290px;
-  height: 450px;
+  height: 400px;
   border: 2px solid #E5E5E5;
 }
 
@@ -464,11 +430,27 @@
   margin-left: 20px;
   margin-top: 15px;
   width: 1290px;
-  height: 450px;
+  height: 400px;
   border: 2px solid #E5E5E5;
 }
 
 .h1cancelled
+{
+  font-size: 18px;
+  font-family: 'Trebuchet MS';
+  margin-left: 10px;
+}
+
+.reschedreq
+{
+  margin-left: 20px;
+  margin-top: 15px;
+  width: 1290px;
+  height: 400px;
+  border: 2px solid #E5E5E5;
+}
+
+.h1resched
 {
   font-size: 18px;
   font-family: 'Trebuchet MS';
