--- a/src/app/aircondetails/aircondetails.component.css
+++ b/src/app/aircondetails/aircondetails.component.css
@@ -1,7 +1,14 @@
+.mat-dialog-content
+{
+    width: 750px;
+    height: 445px;
+}
+
 .h1title
 {
     font-size: 30px;
     font-family: 'Trebuchet MS';
+    margin-top: 40px;
     margin-left: 18px;
 }
 
@@ -73,18 +80,18 @@
 .mat-raised-button
 {
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     font-size: 18px;
-    margin-left: 620px;
+    margin-left: 630px;
     margin-top: 50px;
     height: 50px;
     width: 100px;
 }
 .close-button{
     float: right;
-    top:-24px;
-    right:-15px;
+    top: 5px;
+    right: -15px;
 }
 .close-icon{
     margin: auto;
