--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -1,86 +1,180 @@
 .example-container {
-    max-width: 95%;
-    min-height: 910px;
-    margin-top: 10px;
-    margin-left: 50px;
-    border: 1px solid #E5E5E5;
-    border-radius: 30px;
-  }
-  .mat-drawer
+  max-width: 100%;
+  min-height: 910px;
+  margin-top: 10px;
+  margin-left: 0;
+  border: 1px solid #E5E5E5;
+  border-radius: 30px;
+}
+
+.mat-drawer
+{
+width: 280px;
+background-color: #EAE2B7;
+}
+
+.toolbar
   {
-  width: 280px;
-  background-color: #14213D;
+    background-color: #D62828;
+    margin-top: -20px;
   }
+
   .mat-drawer-content
   {
   height: 910px;
   background-color: white;
   }
-  .logo
-  {
-    width: 170px;
-    height: 90px;
-    margin-top: 50px;
-    margin-left: 50px;
-  }
-  .dashboardside
-  {
-  margin-left: 40px;
-  
-  }
-  .dashBtn
-  {
+
+.logotxt
+{
+  font-family: Candara;
+  font-style: bold;
+  font-size: 30px;
+  color: #FFFFFF;
+  padding-top: 5px;
+  margin-left: 5px;
+}
+
+.logo
+{
+  width: 170px;
+  height: 150px;
+  padding-top: 40px;
+  margin-left: 60px;
+}
+
+.inboxicon
+{
+  font-size: 30px;
   color: white;
+  float: right;
+  margin-right: 160px;
+  margin-top: 10px;
+}
+
+.logouticon
+{
+  font-size: 30px;
+  color: #FFFFFF;
+  margin-left: 1200px;
+  margin-top: 10px;
+}
+
+  .dashboardside
+{
+margin-left: 0px;
+margin-top: 50px;
+text-align: justify;
+}
+
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    
+    align-self: auto;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 50px;
+    text-align: justify;
+    
+}
+
+.dashlink
+{
+color: #003049;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 18px;
+margin-left: 55px;
+text-decoration: none;
+margin-top: -33px;
+}
+
+.homeicon
+{
+  color: #003049;
+  font-size: 35px;
+  padding-top: 20px;
+  margin-left: 55px;
+}
+
+.bookingside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    
+}
+
+.bookinglink
+{
+  color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
-  margin-left: 10px;
-  margin-top: 120px;
-  }
-  .homeicon
-  {
-    color: white;
-    font-size: 25px;
-  }
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
+
+.bookingicon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+   
+.profileside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    
+}
+.profileicon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+.profilelink
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
   .mat-tab-group
   {
       width: 1000px;
       margin-top: 50px;
       margin-left: 70px;
   }
-  .bookingside
-  {
-  margin-left: 40px;
-  }
-  .bookingicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  .bookingBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  .profileside
-  {
-  margin-left: 40px;
-  }
-  .profileicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  .profileBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
+  
   .services
   {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -89,30 +183,7 @@
   margin-top: 40px;
   margin-left: 50px;
   }
-  .inboxicon
-  {
-    font-size: 30px;
-    color: #14213D;
-    float: right;
-    margin-right: 200px;
-    margin-top: -53px;
-  }
-  .logouticon
-  {
-    font-size: 30px;
-    color: #14213D;
-    float: right;
-    margin-right: 140px;
-    margin-top: -53px;
-  }
-  .logoutBtn
-  {
-    font-size: 18px;
-    color: #14213D;
-    float: right;
-    margin-right: 50px;
-    margin-top: -55px;
-  }
+  
 .h1services
 {
     font-family: 'Trebuchet MS';
@@ -133,25 +204,16 @@
   margin: auto;
 }
 
-.electricalcard
+.appliancesimg
 {
-    margin-top: -283px;
-    margin-left: 560px;
-    width: 250px;
-    height: 250px;
+  width: 50px;
+  height: 70px;
 }
-.h1electrical
-{
-    font-family: 'Trebuchet MS';
-    font-size: 20px;
-    justify-content: center;
-    display: flex;
-    margin: auto;
-}
+
 .cleaningcard
 {
-    margin-top: -282px;
-    margin-left: 890px;
+    margin-top: -289px;
+    margin-left: 560px;
     width: 250px;
     height: 250px;
 }
@@ -163,63 +225,36 @@
     display: flex;
     margin: auto;
 }
+.installcard
+{
+    margin-top: -282px;
+    margin-left: 890px;
+    width: 250px;
+    height: 250px;
+}
+.h1install
+{
+    font-family: 'Trebuchet MS';
+    font-size: 17px;
+    justify-content: center;
+    display: flex;
+    margin: auto;
+    margin-left: -19px;
+}
 .h1serviceneed
 {
     font-family: 'Trebuchet MS';
-    font-size: 35px;
+    font-size: 25px;
     color: #14213D;
-    margin-top: 150px;
-    margin-left: 150px;
+    margin-top: 70px;
+    margin-left: 550px;
 }
-.dashlink
+
+.h1bookservice
 {
-    color: white;
-    text-decoration: none; 
-}
-.bookinglink
-{
-color: white;
-text-decoration: none;
-}
-.profilelink
-{
-    color: white;
-    text-decoration: none;
-}
-.dashlink:hover 
-{
-    background-color: #FCA311;
+    font-family: 'Trebuchet MS';
+    font-size: 28px;
     color: #14213D;
-}
-.bookinglink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-}
-.profilelink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-}
-.paymentside
-{
-margin-left: 40px;
-}
-.paymenticon
-{
-  color: white;
-  font-size: 25px;
-}
-.paymentBtn
-{
-color: white;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 10px;
-margin-top: 25px;
-}
-.paymentlink
-{
-  text-decoration: none;
-  color: white;
+    margin-top: 50px;
+    margin-left: 50px;
 }
