--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -10,90 +10,169 @@
 .mat-drawer
 {
 width: 280px;
-background-color: #14213D;
+background-color: #EAE2B7;
 }
+
+.toolbar
+  {
+    background-color: #D62828;
+    margin-top: -20px;
+  }
+
+.logotxt
+  {
+    font-family: Candara;
+    font-style: bold;
+    font-size: 30px;
+    color: #FFFFFF;
+    padding-top: 5px;
+    margin-left: 5px;
+  }
+
+  .inboxicon
+  {
+    font-size: 30px;
+    color: white;
+    float: right;
+    margin-right: 160px;
+    margin-top: 10px;
+  }
+  
+  .logouticon
+  {
+    font-size: 30px;
+    color: #FFFFFF;
+    margin-left: 1200px;
+    margin-top: 10px;
+  }
 
 .mat-drawer-content
 {
 height: 910px;
-background-color: white;
+background-color: #FFFFFF;
 }
 
 .logo
 {
   width: 170px;
-  height: 90px;
-  margin-top: 80px;
-  margin-left: 50px;
+  height: 150px;
+  padding-top: 40px;
+  margin-left: 60px;
 }
 
 .dashboardside
 {
-margin-left: 40px;
-
+margin-left: 0px;
+margin-top: 50px;
+text-align: justify;
 }
-.dashBtn
+
+.dashboardside:hover
 {
-color: white;
+    background-color: #c8c19c;
+    
+    align-self: auto;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 50px;
+    text-align: justify;
+    
+}
+
+.dashlink
+{
+color: #003049;
 font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 font-size: 18px;
-margin-left: 10px;
-margin-top: 120px;
+margin-left: 55px;
+text-decoration: none;
+margin-top: -33px;
 }
 
 .homeicon
 {
-  color: white;
-  font-size: 25px;
+  color: #003049;
+  font-size: 35px;
+  padding-top: 20px;
+  margin-left: 55px;
 }
 
+.bookingside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+}
+
+.bookingside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    
+}
+
+.bookinglink
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
+
+.bookingicon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+   
+.profileside
+{
+  margin-left: 0px;
+  margin-top: 20px;
+  text-align: justify;
+
+}
+
+.profileside:hover
+{
+    background-color: #c8c19c;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    
+}
+.profileicon
+{
+  color: #003049;
+  font-size: 35px;
+  margin-top: 20px;
+  margin-left: 55px;
+}
+
+.profilelink
+{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 18px;
+  margin-left: 55px;
+  text-decoration: none;
+  margin-top: -34px;
+}
 .mat-tab-group
 {
     width: 1000px;
     margin-top: 50px;
     margin-left: 70px;
-}
-
-.bookingside
-{
-margin-left: 40px;
-
-}
-
-.bookingicon
-{
-  color: white;
-  font-size: 25px;
-}
-
-.bookingBtn
-{
-color: white;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 10px;
-margin-top: 30px;
-}
-
-.profileside
-{
-margin-left: 40px;
-
-}
-
-.profileicon
-{
-  color: white;
-  font-size: 25px;
-}
-
-.profileBtn
-{
-color: white;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 10px;
-margin-top: 30px;
 }
 
 .paymentside
@@ -104,19 +183,11 @@ margin-left: 40px;
 
 .paymenticon
 {
-  color: white;
-  font-size: 25px;
+  color: #003049;
+  font-size: 35px;
 }
 
-.paymentBtn
-{
-color: white;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 10px;
-margin-top: 25px;
 
-}
 .paymentlink
 {
   text-decoration: none;
@@ -142,23 +213,6 @@ margin-top: 40px;
 margin-left: 50px;
 }
 
-.inboxicon
-{
-  font-size: 30px;
-  color: #14213D;
-  float: right;
-  margin-right: -250px;
-  margin-top: -40px;
-}
-
-.logouticon
-{
-  font-size: 30px;
-  color: #14213D;
-  float: right;
-  margin-right: -300px;
-  margin-top: -40px;
-}
 
 .logoutBtn
 {
@@ -295,45 +349,7 @@ border-radius: 20px;
   font-family: 'Trebuchet MS'
 }
 
-.dashlink
-{
-    color: white;
-    text-decoration: none;
-    
-}
 
-.bookinglink
-{
-color: white;
-text-decoration: none;
-}
-
-.profilelink
-{
-    color: white;
-    text-decoration: none;
-}
-    
-.dashlink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
-
-.bookinglink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
-
-.profilelink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
 
 .h1serviceid
 {
