--- a/src/app/servicedetails/servicedetails.component.css
+++ b/src/app/servicedetails/servicedetails.component.css
@@ -1,8 +1,8 @@
 .example-container {
-    max-width: 95%;
+    max-width: 100%;
     min-height: 910px;
     margin-top: 10px;
-    margin-left: 50px;
+    margin-left: 0;
     border: 1px solid #E5E5E5;
     border-radius: 30px;
   }
@@ -10,43 +10,163 @@
   .mat-drawer
   {
   width: 280px;
-  background-color: #14213D;
+  background-color: #EAE2B7;
   }
   
-  .mat-drawer-content
+  .toolbar
+    {
+      background-color: #D62828;
+      margin-top: -20px;
+    }
+  
+    .mat-drawer-content
+    {
+    height: 910px;
+    background-color: white;
+    }
+  
+  .logotxt
   {
-  height: 910px;
-  background-color: white;
+    font-family: Candara;
+    font-style: bold;
+    font-size: 30px;
+    color: #FFFFFF;
+    padding-top: 5px;
+    margin-left: 5px;
   }
   
   .logo
   {
     width: 170px;
-    height: 90px;
+    height: 150px;
+    padding-top: 40px;
+    margin-left: 60px;
+  }
+  
+  .inboxicon
+  {
+    font-size: 30px;
+    color: white;
+    float: right;
+    margin-right: 160px;
+    margin-top: 10px;
+  }
+  
+  .logouticon
+  {
+    font-size: 30px;
+    color: #FFFFFF;
+    margin-left: 1200px;
+    margin-top: 10px;
+  }
+  
+.dashboardside
+  {
+  margin-left: 0px;
+  margin-top: 50px;
+  text-align: justify;
+  }
+  
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    align-self: auto;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
     margin-top: 50px;
-    margin-left: 50px;
+    text-align: justify;
+      
   }
   
-  .dashboardside
-  {
-  margin-left: 40px;
-  
-  }
-  .dashBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 120px;
-  }
+.dashlink
+{
+color: #003049;
+font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+font-size: 18px;
+margin-left: 55px;
+text-decoration: none;
+margin-top: -33px;
+}
   
   .homeicon
   {
-    color: white;
-    font-size: 25px;
+    color: #003049;
+    font-size: 35px;
+    padding-top: 20px;
+    margin-left: 55px;
   }
   
+  .bookingside
+  {
+    margin-left: 0px;
+    margin-top: 20px;
+    text-align: justify;
+  }
+  
+  .bookingside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      
+  }
+  
+  .bookinglink
+  {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 55px;
+    text-decoration: none;
+    margin-top: -34px;
+  }
+  
+  .bookingicon
+  {
+    color: #003049;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-left: 55px;
+  }
+  
+     
+  .profileside
+  {
+    margin-left: 0px;
+    margin-top: 20px;
+    text-align: justify;
+  
+  }
+  
+  .profileside:hover
+  {
+      background-color: #c8c19c;
+      width: 100%;
+      height: 70px;
+      margin-left: 0;
+      margin-top: 20px;
+      
+  }
+  .profileicon
+  {
+    color: #003049;
+    font-size: 35px;
+    margin-top: 20px;
+    margin-left: 55px;
+  }
+  
+  .profilelink
+  {
+    color: #003049;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    margin-left: 55px;
+    text-decoration: none;
+    margin-top: -34px;
+  }
   .mat-tab-group
   {
       width: 1000px;
@@ -54,49 +174,7 @@
       margin-left: 70px;
   }
   
-  .bookingside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .bookingicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .bookingBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  
-  .profileside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .profileicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .profileBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  
-  .services
+   .services
   {
   
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -145,45 +223,6 @@
     height: 200px;
 }
   
-
-.h1appliances
-{
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-top: -5px;
-    margin-left: 15px;
-}
-
-.electricalcard
-{
-    margin-top: -235px;
-    margin-left: 610px;
-    width: 200px;
-    height: 200px;
-}
-
-.h1electrical
-{
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-left: -10px;
-}
-
-.cleaningcard
-{
-    margin-top: -230px;
-    margin-left: 900px;
-    width: 200px;
-    height: 200px;
-}
-
-.h1cleaning
-{
-    font-family: 'Trebuchet MS';
-    font-size: 18px;
-    margin-left: 32px;
-}
-
 .stepper
 {
     margin-top: 150px;
@@ -196,12 +235,12 @@
 {
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     width: 100px;
     height: 50px;
     margin-top: 150px;
-    margin-right: 350px;
+    margin-right: 400px;
     float: right;
 }
 
@@ -209,12 +248,12 @@
 {
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     width: 100px;
     height: 50px;
     margin-top: 150px;
-    margin-left: 310px;
+    margin-left: 330px;
     float: left;
 }
 .locationcard
@@ -386,8 +425,8 @@
     margin-top: 30px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     width: 100px;
     height: 50px;
     margin-left: 180px;
@@ -399,11 +438,11 @@
     margin-top: 30px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     width: 100px;
     height: 50px;
-    margin-right: 180px;
+    margin-right: 250px;
     float: right;
 }
 
@@ -498,11 +537,12 @@ margin-top: 10px;
     margin-top: 30px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
+    text-decoration: none;
     width: 100px;
     height: 50px;
-    margin-right: 345px;
+    margin-right: 405px;
     float: right;
 }
 
@@ -516,8 +556,8 @@ margin-top: 10px;
 {
     
     margin-left: 20px;
-    background-color: #FCA311;
-    color: #14213D;
+    background-color: #D62828;
+    color: #FFFFFF;
     height: 52px;
     font-size: 18px;
     font-family: 'Trebuchet MS';
@@ -568,70 +608,3 @@ margin-top: 10px;
     font-family: 'Trebuchet MS';
 }
 
-.dashlink
-{
-    color: white;
-    text-decoration: none;
-    
-}
-
-
-.bookinglink
-{
-color: white;
-text-decoration: none;
-}
-
-.profilelink
-{
-    color: white;
-    text-decoration: none;
-}
-    
-.dashlink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
-
-.bookinglink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
-
-.profilelink:hover 
-{
-    background-color: #FCA311;
-    color: #14213D;
-   
-}
-
-.paymentside
-{
-margin-left: 40px;
-
-}
-
-.paymenticon
-{
-  color: white;
-  font-size: 25px;
-}
-
-.paymentBtn
-{
-color: white;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 10px;
-margin-top: 25px;
-
-}
-.paymentlink
-{
-  text-decoration: none;
-  color: white;
-}
