--- a/src/app/washingmachinedetails/washingmachinedetails.component.css
+++ b/src/app/washingmachinedetails/washingmachinedetails.component.css
@@ -1,3 +1,9 @@
+.mat-dialog-content
+{
+    width: 750px;
+    height: 65px;
+}
+
 .h1title
 {
     font-size: 30px;
@@ -76,7 +82,7 @@
 }
 .close-button{
     float: right;
-    top:-24px;
+    top: 14px;
     margin: auto;
 }
 .close-icon{
